[BACKLOG-16102] - Added a little with to the select.date-picker-select tags in the globalSapphire.css to prevent clipping of text in the dropdown.

--- a/pentaho-gwt-widgets/src/org/pentaho/gwt/widgets/themes/public/themes/sapphire/globalSapphire.css
+++ b/pentaho-gwt-widgets/src/org/pentaho/gwt/widgets/themes/public/themes/sapphire/globalSapphire.css
@@ -521,7 +521,7 @@ select.date-picker-select,
 select.blockout-select {
   margin-right: 10px;
   border-radius: 4px;
-  width: 60px;
+  width: 70px;
 }
 
 div.blockout-label {
